--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ install (TARGETS edit_a
   DESTINATION "${CMAKE_SOURCE_DIR}/lib${LIB_SUFFIX}")
 install (FILES editline/readline.h
   DESTINATION "${CMAKE_SOURCE_DIR}/include/editline")
+install (FILES EDITLINEConfig.cmake
+  DESTINATION "${CMAKE_SOURCE_DIR}")
 string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
 if (MSVC AND uppercase_CMAKE_BUILD_TYPE MATCHES "DEBUG")
   install (FILES ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/edit_a.dir/edit_a.pdb
