--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ install (TARGETS edit_a
   DESTINATION "${CMAKE_SOURCE_DIR}/lib${LIB_SUFFIX}")
 install (FILES editline/readline.h
   DESTINATION "${CMAKE_SOURCE_DIR}/include/editline")
-install (FILES EDITLINEConfig.cmake
+install (FILES EditlineConfig.cmake
   DESTINATION "${CMAKE_SOURCE_DIR}")
 string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
 if (MSVC AND uppercase_CMAKE_BUILD_TYPE MATCHES "DEBUG")
